# figma-screen-gen

./: .env.example  .gitignore  README.md  build.gradle.kts  pyproject.toml  settings.gradle.kts
app/src/main/res/drawable/: cart_1_2.xml  cart_1_5.xml
launcher/: build.gradle.kts
launcher/src/main/kotlin/compose/: ComposePipelineMain.kt
pipeline/: ci_run.sh
pipeline/codegen-kotlin/: build.gradle.kts
pipeline/codegen-kotlin/src/main/kotlin/compose/: DslToComposeGenerator.kt  PipelineLauncher.kt  PipelineMain.kt  SwiftUiPipelineMain.kt
pipeline/codegen-swiftui/: Package.swift
pipeline/codegen-swiftui/.build/: build.db  plugin-tools.yaml
pipeline/codegen-swiftui/.build/arm64-apple-macosx/debug/: SwiftUICodegen  plugin-tools-description.json
pipeline/codegen-swiftui/.build/arm64-apple-macosx/debug/Modules/: SwiftUICodegen.swiftdoc  (+2 more)
pipeline/codegen-swiftui/Sources/SwiftUICodegen/: main.swift
pipeline/config/: node-mapping.yaml  pipeline-config.yaml
pipeline/schemas/: ui_dsl.schema.yaml  ui_ir.schema.json
pipeline/src/: __init__.py  __main__.py  asset_pipeline.py  compose_generator.py  figma_api.py  figma_to_json.py  generate_ui.py  json_to_dsl.py  naming_contract.py  quality_gates.py
pipeline/src/figma_compose_pipeline.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
pipeline/tests/: test_compose_codegen_content.py  test_generate_ui_api_mode.py  test_generate_ui_swiftui_mode.py  test_naming_contract.py  test_pipeline_e2e.py  test_swiftui_codegen_content.py
pipeline/tests/fixtures/: pipeline-config.fixture.yaml  sample_figma_nodes.json
(+90 files in other folders)
